--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -122,6 +122,7 @@ camerlengo ,/n./@教皇内侍;
 cannonball ,/n./@炮弹;
 capability ,/n./@能力;,/n./@才能;
 capacities ,/n./@能力;
+capitulate ,/vi./@投降;
 capricious ,/adj./@善變的;,/adj./@任性的;,/adj./@突发奇想的;
 castration ,/n./@閹割;
 celebrated ,/adj./@有名的;
@@ -323,6 +324,7 @@ evaluation ,/n./@评价;,/n./@评估;
 evangelism ,/n./@福音傳道;
 evangelist ,/n./@福音傳道者;
 Evangelist ,/n./@福音書作者;
+evangelize ,/vt./@宣講福音;
 eventually ,/adv./@最终;,/adv./@终于;
 everything ,/pron./@所有事物;
 everywhere ,/adv./@到處;,/adv./@處處;
