--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -263,6 +263,7 @@ infertility ,/n./@無生育能力;,/n./@貧瘠;,/n./@不肥沃;
 infestation ,/n./@大批出沒;,/n./@侵擾;,/n./@大量滋生;,/n./@大規模侵襲;,/n./@密集滋生;
 information ,/n./@信息;
 innumerable ,/adj./@无数的;
+inquisition ,/n./@審訊;
 inquisitive ,/adj./@好奇的;,/adj./@好問的;,/adj./@愛打聽的;
 inscription ,/n./@題詞;,/n./@銘文;,/n./@銘刻;
 inscrutable ,/adj./@神秘的;,/adj./@不可理解的;
