--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -144,6 +144,7 @@ incompatible ,/adj./@不相容的;
 incompetence ,/n./@不胜任;
 inconsistent ,/adj./@不一致的;
 indebtedness ,/n./@感激;
+indefinitely ,/adv./@無限期地;
 independence ,/n./@独立;,/n./@独立性;
 indifference ,/n./@冷淡;,/n./@不关心;
 individually ,/adv./@个人的;
