--- a/Files/lang/ch/chinese13.csv
+++ b/Files/lang/ch/chinese13.csv
@@ -113,6 +113,7 @@ perfectionist ,/n./@完美主義者;
 perpendicular ,/n./@垂线;
 petrochemical ,/adj./@石油化學的;,/n./@石油化學製品;
 phenomenology ,/n./@現象學;,/n./@現象論;
+physiological ,/adj./@生理學的;,/adj./@生理的;
 physiotherapy ,/n./@物理療法;
 precipitation ,/n./@沉澱;,/n./@降水;,/n./@急躁;,/n./@魯莽;
 predominantly ,/adv./@主要地;,/adv./@顯著的;
