--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -352,7 +352,7 @@ deign ,/vi./@屈尊;,/vi./@賜予;
 deity ,/n./@神;,/n./@女神;,/n./@神性;,/n./@神的地位;,/n./@神的身分;
 delay ,/v./@拖延;,/v./@推遲;
 delve ,/v./@挖;,/v./@钻研;,/v./@探究;
-dense ,/adj./@密集的;
+dense ,/adj./@密集的;,/adj./@稠密的;
 depot ,/n./@倉庫;,/n./@停車場;,/n./@航空站;,/v./@儲藏;
 depth ,/n./@深度;
 deque ,/n./@雙端隊列;
@@ -752,6 +752,7 @@ macho ,/adj./@大男子氣概的;
 madam ,/n./@夫人;,/n./@太太;,/n./@女士;
 mafia ,/n./@黑手黨;
 magic ,/n./@魔術;
+magma ,/n./@岩漿;
 major ,/adj./@主要的;
 mango ,/n./@芒果;
 mania ,/n./@狂熱;
@@ -760,6 +761,7 @@ March ,/n./@三月;
 match ,/v./@競賽;,/v./@相配;,/n./@火柴;,/v./@敵得過;,/n./@對手;
 maths ,/n./@數學;
 matte ,/adj./@亞光的;,/adj./@暗淡的;,/adj./@無光澤的;
+mauve ,/adj./@淡紫色的;,/n./@淡紫色;
 maxim ,/n./@格言;,/n./@準則;,/n./@座右銘;
 maybe ,/adv./@也許;
 means ,/n./@方法;,/n./@手段;,/v./@意味著;
