--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -744,6 +744,7 @@ hither ,/adv.//adj./@這里;
 hobble ,/v./@蹣跚;,/v./@跛行;
 hockey ,/n./@曲棍球;,/n./@冰球;
 hollow ,/adj./@空的;,/adj./@中空的;
+homage ,/n./@尊敬;,/n./@敬意;,/n./@崇敬;
 homely ,/adj./@家常的;,/adj./@简朴的;
 honest ,/adj./@誠實的;
 honour ,/n./@榮幸;
@@ -1718,6 +1719,7 @@ wizard ,/n./@巫師;
 woeful ,/adj./@悲伤的;,/adj./@悲惨的;,/adj./@严重的;,/adj./@可悲的;
 wonder ,/v./@好奇;
 worker ,/n./@工人;,/n./@員工;
+wreath ,/n./@花圈;,/n./@花環;,/n./@花冠;
 writer ,/n./@作者;,/n./@作家;
 yatter ,/v./@閑扯;,/v./@瞎聊;
 yellow ,/n./@黃色;,/adj./@黃色的;
