--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -6,7 +6,7 @@ abolish ,/v./@廢除;,/v./@取消;
 abreast ,/adv./@並排;,/adv./@並列;,/adv./@並肩;
 abscond ,/vi./@潛逃;,/vi./@逃亡;,/vi./@逃走;
 absence ,/n./@缺席;
-absolve ,/v./@解除責任;
+absolve ,/v./@解除責任;,/vt./@寬恕;,/vt./@赦免;
 abstain ,/v./@自我克制;
 academy ,/n./@學院;
 acclaim ,/v./@稱讚;
@@ -135,6 +135,7 @@ bastard ,/n./@私生子;
 bastion ,/n./@稜堡;,/n./@堡壘;
 bathtub ,/n./@浴缸;,/n./@澡盆;
 battery ,/n./@電池;
+bayonet ,/n./@刺刀;
 bearing ,/n./@軸承;
 because ,/conj./@因爲;
 bedrock ,/n./@基岩;,/n./@基礎;,/n./@根基;,/n./@基石;
@@ -400,10 +401,12 @@ debacle ,/n./@崩潰;,/n./@災害;,/n./@解凍;
 debrief ,/vt./@聽取匯報;,/vt./@聽取報告;
 deceive ,/v./@欺騙;
 decency ,/n./@體面;
+decibel ,/n./@分貝;
 decimal ,/adj./@十進制的;,/adj./@小數的;
 declaim ,/v./@演講;
 declare ,/v./@聲明;
 decline ,/v./@下降;,/v./@謝絕;
+decorum ,/n./@端莊;,/n./@禮節;
 decrypt ,/vt./@解碼;,/v./@解釋;
 default ,/n./@默認;,/v.//n./@拖欠;,/v.//n./@不履行;
 defence ,/n./@防衛;,/n./@防禦;,/n./@防護;,/n./@保衛;,/n./@答辯;,/n./@抗辯;,/n./@國防;
@@ -1462,6 +1465,7 @@ through ,/v./@通過;,/adv./@徹底;,/adj./@直達的;
 thulium ,/n./@銩;
 thunder ,/n./@雷;
 thyroid ,/n./@甲狀腺;,/n./@甲狀軟骨;,/adj./@甲狀腺的;,/adj./@甲狀軟骨的;
+tinfoil ,/n./@錫箔;
 tobacco ,/n./@煙草;
 toddler ,/n./@學步的小孩;,/n./@幼童;
 tonight ,/n./@今晚;,/adv./@今晚;
