--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -86,6 +86,7 @@ aperitif ,/n./@开胃酒;
 aperture ,/n./@孔;,/n./@隙縫;,/n./@孔徑;,/n./@光圈;,/n./@孔洞;
 aphorism ,/n./@格言;,/n./@箴言;
 apostasy ,/n./@變節;,/n./@背叛;,/n./@叛教;
+apostate ,/adj./@叛教的;,/n./@叛教者;
 appalled ,/adj./@惊骇的;
 apparent ,/adj./@明显的;,/adj./@表面上的;
 appendix ,/n./@附录;,/n./@阑尾;
@@ -1327,6 +1328,7 @@ velocity ,/n./@速度;,/n./@速率;
 venerate ,/vt./@崇敬;,/vt./@敬重;
 veracity ,/n./@真實;,/n./@誠實;,/n./@真實性;
 verbatim ,/adj./@逐字的;,/adv./@逐字地;
+vermouth ,/n./@苦艾酒;
 vertebra ,/n./@脊椎骨;
 vertical ,/adj./@垂直的;,/adj./@竖的;
 vestment ,/n./@法衣;,/n./@祭袍;,/n./@禮服;,/n./@官服;
@@ -1360,6 +1362,7 @@ wireless ,/adj./@無線的;,/n./@無線電;
 withdraw ,/v./@撤退;,/v./@收回;,/v./@撤销;
 wondrous ,/adj./@奇妙的;,/adj./@令人驚奇的;,/adj./@非常的;
 workflow ,/n./@工作流程;
+wormwood ,/n./@苦艾;
 wouldn't ,/v./@不会;
 wrangler ,/n./@爭論者;,/n./@牧人;
 wreckage ,/n./@残骸;
