--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -88,6 +88,7 @@ arbitrary ,/adj./@专横的;,/adj./@任意的;
 arbitrate ,/v./@仲裁;,/v./@公斷;
 archetype ,/n./@典範;
 Aristotle ,/n./@亞里士多德;,/n./@亞里斯多德;
+armadillo ,/n./@犰狳;
 arresting ,/adj./@吸引人的;
 arrogance ,/n./@傲慢;,/n./@自大;
 arthritic ,/adj./@关节炎的;,/adj./@患关节炎的;
@@ -284,6 +285,7 @@ credulous ,/adj./@輕信的;
 criterion ,/n./@标准;,/n./@準則;
 criticize ,/v./@批评;
 crocodile ,/n./@鳄鱼;
+croissant ,/n./@新月形麵包;,/n./@可頌;
 crossfire ,/n./@交叉火力;,/n./@激烈交锋;
 crossover ,/n./@交叉;,/n./@交叉點;,/n./@穿越;,/n./@轉型;,/n./@轉型者;,/adj./@轉型的;
 crossword ,/n./@纵横字谜;
@@ -786,6 +788,7 @@ operation ,/n./@操作;,/n./@手术;,/n./@经营;
 operative ,/n./@技工;,/n./@工人;,/n./@特工;,/n./@特務;,/n./@間諜;,/adj./@運行著的;,/adj./@起作用的;,/adj./@有效的;,/adj./@手術的;
 opportune ,/adj./@及時的;,/adj./@湊巧的;
 orchestra ,/n./@管弦樂隊;,/n./@交響樂;
+ordinance ,/n./@法令;,/n./@條例;
 originate ,/v./@创始;,/vt./@發明;,/vt./@引發;,/vt./@創作;
 orphanage ,/n./@孤兒院;
 oscillate ,/v./@震盪;,/v./@擺動;,/v./@振盪;,/v./@搖擺;
@@ -864,6 +867,7 @@ plentiful ,/adj./@丰富的;,/adj./@充足的;
 plication ,/n./@褶皺;,/n./@皺紋;
 pluralism ,/n./@多元化;
 pneumatic ,/adj./@氣體的;,/adj./@空氣的;,/adj./@充氣的;,/adj./@壓縮空氣推動的;,/adj./@氣動的;
+pneumonia ,/n./@肺炎;
 poisonous ,/adj./@有毒的;
 politburo ,/n./@政治局;
 political ,/adj./@政治的;
@@ -1112,6 +1116,7 @@ tentative ,/adj./@試探性的;,/adj./@試驗性的;,/adj./@暫時性的;,/adj./
 terminate ,/vt./@终止;,/vt./@结束;,/vt./@停止;,/vt./@解雇;
 territory ,/n./@领地;
 tesseract ,/n./@四次元立方體;,/n./@超立方體;,/n./@四維立方體;
+testament ,/n./@證明;,/n./@證據;,/n./@遺囑;,/n./@聖約;
 theocracy ,/n./@神權政體;
 therefore ,/conj.//adv./@因此;
 thesaurus ,/n./@寶庫;,/n./@同義詞詞典;,/n./@類屬詞典;,/n./@主題詞表;,/n./@同反義詞詞典;
