--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -122,6 +122,7 @@ camerlengo
 cannonball
 capability
 capacities
+capitulate
 capricious
 castration
 celebrated
@@ -323,6 +324,7 @@ evaluation
 evangelism
 evangelist
 Evangelist
+evangelize
 eventually
 everything
 everywhere
