--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -752,6 +752,7 @@ macho
 madam
 mafia
 magic
+magma
 major
 mango
 mania
@@ -760,6 +761,7 @@ March
 match
 maths
 matte
+mauve
 maxim
 maybe
 means
