--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -744,6 +744,7 @@ hither
 hobble
 hockey
 hollow
+homage
 homely
 honest
 honour
@@ -1718,6 +1719,7 @@ wizard
 woeful
 wonder
 worker
+wreath
 writer
 yatter
 yellow
