--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -135,6 +135,7 @@ bastard
 bastion
 bathtub
 battery
+bayonet
 bearing
 because
 bedrock
@@ -400,10 +401,12 @@ debacle
 debrief
 deceive
 decency
+decibel
 decimal
 declaim
 declare
 decline
+decorum
 decrypt
 default
 defence
@@ -1462,6 +1465,7 @@ through
 thulium
 thunder
 thyroid
+tinfoil
 tobacco
 toddler
 tonight
