--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -86,6 +86,7 @@ aperitif
 aperture
 aphorism
 apostasy
+apostate
 appalled
 apparent
 appendix
@@ -1327,6 +1328,7 @@ velocity
 venerate
 veracity
 verbatim
+vermouth
 vertebra
 vertical
 vestment
@@ -1360,6 +1362,7 @@ wireless
 withdraw
 wondrous
 workflow
+wormwood
 wouldn't
 wrangler
 wreckage
