--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -88,6 +88,7 @@ arbitrary
 arbitrate
 archetype
 Aristotle
+armadillo
 arresting
 arrogance
 arthritic
@@ -284,6 +285,7 @@ credulous
 criterion
 criticize
 crocodile
+croissant
 crossfire
 crossover
 crossword
@@ -786,6 +788,7 @@ operation
 operative
 opportune
 orchestra
+ordinance
 originate
 orphanage
 oscillate
@@ -864,6 +867,7 @@ plentiful
 plication
 pluralism
 pneumatic
+pneumonia
 poisonous
 politburo
 political
@@ -1112,6 +1116,7 @@ tentative
 terminate
 territory
 tesseract
+testament
 theocracy
 therefore
 thesaurus
