--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -316,6 +316,7 @@ clumsy ,/adj./@笨拙的;
 clunky ,/adj./@笨重的;,/adj./@過時的;,/adj./@難用的;,/adj./@哐啷作響的;,/adj./@哐噹作響的;
 clutch ,/v./@抓緊;
 coarse ,/adj./@粗糙的;,/adj./@粗的;,/adj./@粗劣的;,/adj./@粗俗的;,/adj./@粗魯的;
+cobalt ,/n./@鈷;
 cobble ,/n./@鵝卵石;
 cocoon ,/n./@茧;,/n./@蚕茧;
 coerce ,/v./@強制;,/v./@迫使;,/vt./@强迫;
@@ -921,6 +922,7 @@ master ,/n./@主人;
 matter ,/n./@問題;,/n./@事情;
 mature ,/adj./@成熟的;
 mayday ,/n./@求救信號;
+mayhem ,/n./@騷亂;,/n./@重傷罪;
 meadow ,/n./@草地;,/n./@牧場;
 meddle ,/v./@干預;,/v./@管閑事;,/vi./@干涉;
 median ,/adj./@中間的;
@@ -986,6 +988,7 @@ museum ,/n./@博物館;,/n./@陳列館;
 musket ,/n./@毛瑟槍;,/n./@火槍;
 mutant ,/n./@突變體;,/adj./@突變的;
 mutate ,/v./@變化;,/v./@改變;,/v./@突變;
+mutiny ,/n./@反叛;,/n./@叛亂;
 mutter ,/v./@咕噥;
 mutual ,/adj./@相互的;
 muzzle ,/n./@口套;,/n./@口鼻;,/n./@槍口;,/n./@炮口;,/vt./@戴上口套;,/vt./@使緘默;,/vt./@箝制...的言論;,/vt./@封鎖...的言論;
@@ -1156,6 +1159,7 @@ potion ,/n./@飲劑;
 powder ,/n./@粉末;,/n./@火藥;
 praise ,/v./@贊揚;
 prance ,/v./@騰躍;
+praxis ,/n./@實踐;,/n./@慣例;
 preach ,/v./@佈道;
 prefix ,/n./@前綴;,/v./@加前綴;
 pretty ,/adv./@很;,/adj./@漂亮的;
