--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -711,6 +711,7 @@ harbour ,/n./@港灣;
 harmful ,/adj./@有害的;
 harmony ,/n./@和諧;
 harness ,/v./@治理;,/v./@利用;,/n./@馬具;,/vt./@駕馭;,/vt./@支配;
+harpoon ,/n./@魚叉;
 harvest ,/v.//n./@收割;,/v.//n./@收獲;
 hashtag ,/n./@標簽;
 hastily ,/adv./@匆忙地;,/adv./@倉促地;,/adv./@草率地;
@@ -1259,6 +1260,7 @@ rupture ,/vt./@破裂;,/vt./@断绝;,/n./@破裂;,/n./@断绝;
 sabbath ,/n./@安息日;
 salient ,/adj./@顯著的;,/adj./@突出的;,/adj./@凸出的;,/adj./@突起的;
 salvage ,/v./@搶救;,/v./@打撈;
+sanctum ,/n./@聖所;,/n./@密室;
 sapient ,/n./@智人;,/adj./@智人的;,/adj./@智慧的;,/adj./@聰明的;
 sarcasm ,/n./@諷刺;,/n./@嘲笑;
 satchel ,/n./@挎包;,/n./@書包;,/n./@小背包;
@@ -1545,6 +1547,7 @@ varsity ,/n./@大學;,/adj./@大學代表隊的;
 vatican ,/n./@梵蒂岡;
 Vatican ,/n./@梵蒂岡;,/n./@天主教廷;
 vehicle ,/n./@車輛;
+venison ,/n./@鹿肉;
 ventage ,/n./@漏口;
 venture ,/n./@冒險;,/n./@風險;,/v./@冒險;,/v./@投機;
 verbose ,/adj./@冗長的;,/adj./@囉嗦的;
