--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -679,7 +679,7 @@ infinite ,/adj./@无尽的;,/adj./@无穷的;,/adj./@无限的;
 infinity ,/n./@无穷;,/n./@无限;,/n./@无数;
 informal ,/adj./@非正式的;
 infrared ,/adj./@红外线的;,/n./@紅外線;
-infringe ,/v./@侵權;
+infringe ,/v./@侵權;,/v./@侵犯;
 inherent ,/adj./@固有的;,/adj./@內在的;,/adj./@與生俱來的;,/adj./@生來就有的;
 initiate ,/v./@开始;,/v./@创始;
 innocent ,/adj./@天真的;
@@ -1174,6 +1174,7 @@ somewhat ,/adv./@几分;,/adv./@有点;,/adv./@稍微;
 soothing ,/adj./@抚慰的;
 sorority ,/n./@妇女联谊会;,/n./@女生聯誼會;
 spacious ,/adj./@宽敞的;
+Spaniard ,/n./@西班牙人;
 specific ,/adj./@特殊的;,/adj./@明确的;
 spectrum ,/n./@光谱;,/n./@频谱;,/n./@范围;,/n./@余象;
 spiffing ,/adj./@極好的;
