--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -732,6 +732,7 @@ megaphone ,/n./@擴音器;,/n./@話筒;
 melodrama ,/n./@情節劇;,/n./@戏剧性事件;,/n./@傳奇劇;
 menstrual ,/adj./@月经的;
 mentality ,/n./@心態;,/n./@精神性;,/n./@心理狀態;
+mercenary ,/n./@僱傭兵;,/adj./@圖財的;,/adj./@僱傭的;
 mesmerize ,/v./@吸引;,/vt./@迷惑;,/vt./@迷住;,/vt./@催眠;
 messianic ,/adj./@彌賽亞的;,/adj./@救世主的;,/adj./@信奉救世主的;,/adj./@以救世主自居的;
 metabolic ,/adj./@变化的;,/adj./@新陈代谢的;
