--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -316,6 +316,7 @@ clumsy
 clunky
 clutch
 coarse
+cobalt
 cobble
 cocoon
 coerce
@@ -921,6 +922,7 @@ master
 matter
 mature
 mayday
+mayhem
 meadow
 meddle
 median
@@ -986,6 +988,7 @@ museum
 musket
 mutant
 mutate
+mutiny
 mutter
 mutual
 muzzle
@@ -1156,6 +1159,7 @@ potion
 powder
 praise
 prance
+praxis
 preach
 prefix
 pretty
