--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -711,6 +711,7 @@ harbour
 harmful
 harmony
 harness
+harpoon
 harvest
 hashtag
 hastily
@@ -1259,6 +1260,7 @@ rupture
 sabbath
 salient
 salvage
+sanctum
 sapient
 sarcasm
 satchel
@@ -1545,6 +1547,7 @@ varsity
 vatican
 Vatican
 vehicle
+venison
 ventage
 venture
 verbose
