--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -15,6 +15,7 @@ access ,/v./@使用;,/v./@接近;,/v./@進入;
 accord ,/v./@符合;,/v./@一致;,/v./@根据;,/n./@协议;
 accrue ,/v./@产生;,/v./@发生;
 accuse ,/v./@控告;
+acidic ,/adj./@酸性的;
 acquit ,/vt./@宣告無罪;,/vt./@免罪;,/vt./@免責;,/vt./@清償;
 action ,/n./@行動;,/n./@行爲;
 active ,/adj./@積極的;,/adj./@活躍的;
