--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -946,6 +946,7 @@ realistic ,/adj./@逼真的;,/adj./@实际的;
 rebellion ,/n./@反叛;,/n./@叛乱;
 reception ,/n./@接待;,/n./@招待;
 recession ,/n./(经济)@衰退;
+recessive ,/adj./@隱性的;,/adj./@退隱的;,/adj./@逆行的;,/adj./@後退的;
 recipient ,/n./@容器;,/n./@接受者;,/adj./@易接受的;
 reclusive ,/adj./@隐居的;,/adj./@隐遁的;
 recognize ,/v./@认识;,/v./@意识;
