--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -314,6 +314,7 @@ enticement ,/n./@诱惑;,/n./@怂恿;,/n./@诱饵;
 entomology ,/n./@昆蟲學;
 entrancing ,/adj./@吸引人的;
 epexegesis ,/n./@附加說明;
+equanimity ,/n./@鎮定;
 equivalent ,/adj./@等价的;
 equivocate ,/v./@模棱兩可;,/v./@支吾其詞;,/v./@含糊其辭;
 ergonomics ,/n./@人體工學;,/n./@工效學;,/n./@人類工程學;
