--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -232,6 +232,7 @@ disk ,/n./@磁盤;
 dive ,/v./@潛水;,/v./@跳水;,/v./@俯冲;
 dock ,/n./@碼頭;
 does ,/v./@做;,/v./@是;,/aux./@;
+dole ,/vt./@發放;,/n./@賑濟物;,/n./@失業救濟金;
 doll ,/n./@玩偶;,/n./@娃娃;,/n./@洋娃娃;
 dome ,/n./@圓頂;,/n./@穹窿;
 done ,/v./@完成;
@@ -712,6 +713,7 @@ null ,/n./@無;
 numb ,/adj./@麻木的;
 oath ,/n./@誓言;,/n./@誓約;
 obey ,/v./@遵守;
+ogre ,/n./@食人惡魔;,/n./@吃人怪物;
 Ohio ,/n./@俄亥俄州;
 okay ,/adj./@好的;,/adj./@是;
 okra ,/n./@秋葵;
