--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -728,6 +728,7 @@ litre ,/n./@升;
 liver ,/n./@肝脏;
 lobby ,/n./@前廳;,/v./@遊說;,/n./@大堂;
 local ,/adj./@當地的;
+locus ,/n./@位置;
 lodge ,/n./@旅館;,/n./@門房;,/v./@提出;,/v./@寄存;,/v./@寄宿;
 logic ,/n./@邏輯;
 login ,/v./@登錄;,/v./@注冊;,/n./@登錄;
