--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -457,6 +457,7 @@ diorama ,/n./@透视模型;,/n./@立體模型;,/n./@仿真模型;,/n./@透视缩
 dioxide ,/n./@二氧化物;
 diploma ,/n./@畢業文憑;,/n./@學位證書;
 disable ,/v./@致殘;,/v./使@失去能力;
+disavow ,/vt./@否認;
 disband ,/v./@解散;,/v./@遣散;
 discard ,/v./@抛棄;,/v./@放棄;,/v./@丢弃;
 discern ,/v./@識別;
@@ -1441,6 +1442,7 @@ tarnish ,/v./@玷污;,/n./@污點;,/vt./@敗壞;
 teacher ,/n./@教師;
 tedious ,/adj./@乏味的;,/adj./@煩悶的;
 teenage ,/adj./@青少年的;
+tenable ,/adj./@站得住腳的;,/adj./@守得住的;
 tenfold ,/adj./@十倍的;
 tension ,/n./@拉力;,/n./@張力;,/n./@緊張;
 Teochew ,/adj./@潮州人的;,/n./@潮州人;
