--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -63,6 +63,7 @@ ambition ,/n./@野心;,/n./@抱负;
 ambulant ,/adj./@流动的;,/adj./@走动的;
 amenable ,/adj./@順從的;,/adj./@服从的;
 American ,/n./@美国人;
+amethyst ,/n./@紫水晶;,/n./@紫晶;
 amicable ,/adj./@友善的;
 amphibia ,/n./@兩棲類;
 amputate ,/vt./@截除;,/vi./@截肢;
@@ -653,6 +654,7 @@ illusion ,/n./@幻觉;
 immanent ,/adj./@內在的;
 imminent ,/adj./@迫近的;,/adj./@临近的;,/adj./@迫在眉睫的;,/adj./@即将来临的;,/adj./@即将发生的;,/adj./@即将作出的;
 immmerse ,/n./@沉浸;
+immolate ,/vt./@燔祭;
 immortal ,/adj./@不死的;,/adj./@永生的;
 immunity ,/n./@免疫力;,/n./@豁免權;
 imperial ,/adj./@帝国的;
