--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -895,6 +895,7 @@ preferred ,/adj./@优先的;
 pregnancy ,/n./@懷孕;
 prejudice ,/n./@偏见;
 premature ,/adj./@過早的;,/adj./@倉促的;,/adj./@不成熟的;,/adj./@早產的;
+prescient ,/adj./@有先見之明的;,/adj./@有預知能力的;
 prescribe ,/v./@指定;,/v./@开@药;,/v./@采用;
 president ,/n./@总统;
 preterist ,/n./@末世預言實現論者;
