--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -457,6 +457,7 @@ diorama
 dioxide
 diploma
 disable
+disavow
 disband
 discard
 discern
@@ -1441,6 +1442,7 @@ tarnish
 teacher
 tedious
 teenage
+tenable
 tenfold
 tension
 Teochew
