--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -63,6 +63,7 @@ ambition
 ambulant
 amenable
 American
+amethyst
 amicable
 amphibia
 amputate
@@ -653,6 +654,7 @@ illusion
 immanent
 imminent
 immmerse
+immolate
 immortal
 immunity
 imperial
