--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -63,6 +63,7 @@ analgesic ,/n./@鎮痛劑;
 analogous ,/adj./@类似的;
 anarchism ,/n./@無政府主義;
 anarchist ,/n./@反抗權威的人;,/n./@無政府主義者;,/adj./@無政府主義的;
+anchorage ,/n./@停泊;,/n./@下錨;,/n./@錨地;,/n./@泊地;
 ancillary ,/adj./@次要的;
 androgyne ,/n./@雙性人;
 animation ,/n./@动画;,/n./@活力;,/n./@生機;
