--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -139,6 +139,7 @@ illumination ,/n./@照明;,/n./@启发;
 illustration ,/n./@阐明;,/n./@图示;
 illustrative ,/adj./@說明的;
 inaccessible ,/adj./@很难得到的;
+inauguration ,/n./@就职;,/n./@就职仪式;,/n./@开幕式;,/n./@开端;
 incandescent ,/adj./@熾熱的;,/adj./@耀眼的;,/adj./@白熱的;,/adj./@輝煌的;
 incompatible ,/adj./@不相容的;
 incompetence ,/n./@不胜任;
