--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1008,7 +1008,7 @@ rehab ,/n./@康复;,/vt./@修复;
 reign ,/v./@統治;,/v./@支配;
 relax ,/v./@放松;
 relay ,/v./@转播;,/v./@中继;,/v./@傳達;,/v./@轉達;,/n./@輪換者;,/n./@接力賽;,/n./@中繼轉播;,/n./@繼電器;
-relic ,/n./@遺產;
+relic ,/n./@遺產;,/n./@遗迹;,/n./@遗物;,/n./@遗俗;,/n./@文物;,/n./@古董;
 repay ,/vt./@歸還;
 repel ,/v./@抵制;,/v./@擊退;,/v./@排斥;,/v./@驅離;
 reply ,/v./@囘應;
