--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -859,7 +859,7 @@ layout ,/n./@設計;,/n./@規劃;,/n./@圖案;
 leader ,/n./@領導;,/n./@領袖;
 league ,/n./@同盟;,/n./@協會;
 leeway ,/n./@餘地;,/n./@退路;
-legacy ,/n./@遺贈;,/n./@遺產;
+legacy ,/n./@遺贈;,/n./@遺產;,/adj./@老式的;
 legato ,/adj./@連奏的;,/adj./@連唱的;
 legend ,/n./@傳奇;,/n./@傳說;
 legion ,/n./@軍團;,/n./@衆多;,/n./@軍隊;
@@ -1107,7 +1107,7 @@ peddle ,/vt./@兜售;,/vt./@宣传;,/vt./@非法贩卖;,/vt./@散播;
 peking ,/n./@北京;
 pelvis ,/n./@骨盆;
 pencil ,/n./@鉛筆;
-people ,/n./@人;
+people ,/n./@人;,/n./@人民;,/n./@民族;
 pepper ,/n./@胡椒;
 period ,/n./@一段時間;,/n./@學識;,/n./@記號;
 perish ,/v./@死亡;,/v./@毀滅;
