--- a/Files/lang/phrases/3 word phrase.csv
+++ b/Files/lang/phrases/3 word phrase.csv
@@ -29,3 +29,5 @@
 ,magnetic,tape,cartridge,磁帶盒;
 ,record,player,cartridge,針匣;
 ,crack,sb.'s,knuckles,使sb.的指關節噼啪作響;
+,in,case,of,在...情况下;
+,in,advance,of,在...之前;
