--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -226,7 +226,7 @@ clipboard ,/n./@剪切板;
 clockwise ,/adj./@順時針的;,/adv./@順時針;
 clockwork ,/n./@發條裝置;,/n./@鐘錶的機械;
 coagulate ,/v./@凝結;
-coalition ,/n./@同盟;
+coalition ,/n./@同盟;,/n./@联盟;
 cognition ,/n./@認識;,/n./@認知;
 cognitive ,/adj./@认知的;,/adj./@认知能力的;,/adj./@认知过程的;,/adj./@認識的;
 collation ,/n./@整理;,/n./@校對;
