--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -632,6 +632,7 @@ precarious ,/adj./@不穩的;,/adj./@危險的;,/adj./@說不定的;
 precaution ,/n./@預防;,/n./@警惕;,/n./@謹慎;
 precedence ,/n./@領先;
 prediction ,/n./@预言;
+preemptive ,/adj./@先发制人的;
 preferable ,/adj./@更合适的;,/adj./@更好的;,/adj./@更可取的;
 presidency ,/n./@总统任期;
 prevalence ,/n./@流行;,/n./@盛行;,/n./@普遍;,/n./@流行程度;,/n./@普遍性;
