--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -130,6 +130,7 @@ bacterium ,/n./@細菌;
 balaclava ,/n./@巴拉克拉瓦盔式帽;
 ballerina ,/n./@芭蕾舞女演員;
 ballistic ,/adj./@彈道的;
+bandwagon ,/n./@随大流;
 barbarous ,/adj./@野蠻的;,/adj./@粗野的;,/adj./@殘暴的;,/adj./@未開化的;,/adj./@原始的;,/adj./@無文化的;,/adj./@粗鄙的;,/adj./@粗俗的;
 barometer ,/n./@气压计;
 barricade ,/n./@路障;,/n./@街壘;,/vt./@堵住;
