--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -53,7 +53,7 @@ commensurate ,/adj./@相稱的;,/adj./@同量的;
 commonwealth ,/n./@共和国;
 compensation ,/n./@補償;,/n./@彌補;,/n./@賠償;,/n./@賠償金;,/n./@補償金;,/n./@報酬;
 complication ,/n./@复杂;,/n./@复杂化;
-conciliatory ,/adj./@安撫的;
+conciliatory ,/adj./@安撫的;,/adj./@和解的;,/adj./@调解的;
 condemnation ,/n./@譴責;,/n./@判決;
 confidential ,/adj./@機密的;
 confirmation ,/n./@确认;,/n./@证实;,/n./@巩固;
