--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1127,6 +1127,7 @@ pretext ,/n./@借口;
 prevail ,/v./@流行;,/v./@盛行;,/v./@戰勝;
 prevent ,/v./@避免;
 preview ,/v./@預覽;
+prickly ,/adj./@多刺的;,/adj./@刺痛的;,/adj./@棘手的;
 primary ,/adj./@首要的;,/adj./@初級的;
 primate ,/n./@靈長目動物;,/n./@靈長類動物;,/n./@大主教;,/adj./@首要的;
 privacy ,/n./@隱私;
