--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -992,7 +992,7 @@ requisite ,/adj./@必要的;,/adj./@需要的;
 resentful ,/adj./@怨恨的;
 reservoir ,/n./@水庫;,/n./@蓄水池;
 residence ,/n./@居住;
-resilient ,/adj./@堅韌的;
+resilient ,/adj./@堅韌的;,/adj./@有弹性的;,/adj./@抵抗能力强的;,/adj./@适应能力强的;
 resultant ,/adj./@結果的;
 resurrect ,/v./@复活;,/v./@使复活;
 retaliate ,/v./@報復;
