--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -352,6 +352,7 @@ deign ,/vi./@屈尊;,/vi./@賜予;
 deity ,/n./@神;,/n./@女神;,/n./@神性;,/n./@神的地位;,/n./@神的身分;
 delay ,/v./@拖延;,/v./@推遲;
 delve ,/v./@挖;,/v./@钻研;,/v./@探究;
+demon ,/n./@恶魔;,/n./@魔鬼;,/n./@邪念;
 dense ,/adj./@密集的;,/adj./@稠密的;
 depot ,/n./@倉庫;,/n./@停車場;,/n./@航空站;,/v./@儲藏;
 depth ,/n./@深度;
