--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -994,6 +994,7 @@ mutter ,/v./@咕噥;
 mutual ,/adj./@相互的;
 muzzle ,/n./@口套;,/n./@口鼻;,/n./@槍口;,/n./@炮口;,/vt./@戴上口套;,/vt./@使緘默;,/vt./@箝制...的言論;,/vt./@封鎖...的言論;
 myopia ,/n./@近視;,/n./@目光短淺;
+myriad ,/n./@无数;
 myself ,/pron./@我自己;
 mystic ,/adj./@神秘的;
 namely ,/adv./@即;,/adv./@也就是;
