--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -111,6 +111,7 @@ atonement ,/n./@贖罪;,/n./@補償;
 attention ,/n./@注意;
 attentive ,/adj./@注意的;,/adj./@留意的;
 attribute ,/n./@属性;,/n./@特质;
+attrition ,/n./@消耗;
 authentic ,/adj./@真正的;,/adj./@真實的;,/adj./@可靠的;,/adj./@真實可信的;
 authority ,/n./@权威;
 autocracy ,/n./@獨裁;
