--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -730,6 +730,7 @@ hearth ,/n./@壁爐;,/n./@爐邊;
 heaven ,/n./@天堂;,/n./@天空;
 heckle ,/v./@詰問;
 hectic ,/adj./@忙乱的;
+heifer ,/n./@小母牛;
 height ,/n./@髙;,/n./@髙度;
 helium ,/n./@氦;
 heptad ,/n./@七個一組;
@@ -944,6 +945,8 @@ methyl ,/n./@甲基;,/n./@木精;
 micron ,/n./@微米;,/n./@百萬分之一米;
 middle ,/adj./@中間的;
 midget ,/n./@矮子;,/n./@侏儒;
+mikvah ,/redirected./@target="mikveh";
+mikveh ,/n./@浸禮池;
 mildew ,/n./@霉;,/v./@發霉;
 milieu ,/n./@環境;
 miller ,/n./@磨坊主;
