--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -243,6 +243,7 @@ commissar ,/n./@政治委员;,/n./@人民委员;
 committee ,/n./@委員會;
 commodity ,/n./@商品;
 commotion ,/n./@騷亂;,/n./@喧鬧;
+communion ,/n./@交流;,/n./@圣餐;
 communism ,/n./@共產主義;
 communist ,/n./@共產主義者;
 community ,/n./@社会;,/n./@社區;,/n./@社团;,/n./@团体;,/n./@群落;
@@ -1006,6 +1007,7 @@ sacrifice ,/n./@牺牲;
 salacious ,/adj./@淫穢的;,/adj./@淫蕩的;,/adj./@猥褻的;,/adj./@色情的;
 salvation ,/n./@拯救;
 sanctuary ,/n./@避難所;,/n./@至聖所;,/n./@神殿;
+sanhedrin ,/n./@议会;,/n./@评议会;
 sarcastic ,/adj./@挖苦的;,/adj./@讽刺的;
 satirical ,/adj./@諷刺的;
 satisfied ,/adj./@感到滿意的;
