--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -730,6 +730,7 @@ hearth
 heaven
 heckle
 hectic
+heifer
 height
 helium
 heptad
@@ -944,6 +945,8 @@ methyl
 micron
 middle
 midget
+mikvah
+mikveh
 mildew
 milieu
 miller
