--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -243,6 +243,7 @@ commissar
 committee
 commodity
 commotion
+communion
 communism
 communist
 community
@@ -1006,6 +1007,7 @@ sacrifice
 salacious
 salvation
 sanctuary
+sanhedrin
 sarcastic
 satirical
 satisfied
