--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -628,6 +628,7 @@ polychrome ,/n./@多彩;,/adj./@多彩的;,/adj./@多色的;
 population ,/n./@人口;
 possession ,/n./@資產;,/n./@所有;,/n./@擁有;,/n./@佔有;,/n./@領地;
 powertrain ,/n./@動力總成;
+praetorium ,/n./@总督府;,/n./@官邸;
 precarious ,/adj./@不穩的;,/adj./@危險的;,/adj./@說不定的;
 precaution ,/n./@預防;,/n./@警惕;,/n./@謹慎;
 precedence ,/n./@領先;
