--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -993,6 +993,7 @@ stay ,/v./@停留;
 stem ,/n./@主干;
 step ,/n./@步;,/v./@踩;
 stir ,/v./@攪拌;,/v./@煽動;,/n./@騷亂;
+stoa ,/n./@柱廊;
 stop ,/v./@停止;
 stub ,/n./@煙蒂;,/n./@斷株;,/v./@踩熄;,/v./@拔除;,/n./@存根;,/n./@票根;
 stud ,/n./@種馬;,/v./@散布;,/n./@大頭釘;
