--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1029,7 +1029,7 @@ river ,/n./@河流;
 rivet ,/n./@鉚釘;,/vt./@鉚;,/vt./@鉚接;,/vt./@固定;
 roast ,/v./@烤;,/adj./@烤的;
 robot ,/n./@機器人;
-rogue ,/n./@流氓;
+rogue ,/n./@流氓;,/n./@无赖;
 Rolex ,/n./@勞力士;
 Roman ,/n./@羅馬人;
 rotor ,/n./@轉子;,/n./@轉片;
