--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -208,6 +208,7 @@ Cabbala ,/redirected./@target="Kabbalah";
 cabinet ,/n./@內閣;,/n./@壁櫥;,/n./@座舱;,/n./@柜;
 cadaver ,/n./@屍體;,/n./@死屍;,/n./@屍首;
 calcium ,/n./@钙;
+calvary ,/n./@加爾瓦略山;,/n./@各各他山;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
 capable ,/adj./@潛在的;,/adj./@可能的;
 capella ,/n./@教堂;
