--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -34,6 +34,7 @@ adorable ,/adj./@可爱的;,/adj./@可敬的;
 adultery ,/n./@通姦;
 advanced ,/adj./@先进的;
 advocate ,/v./@提倡;
+aedicula ,/n./@小神龛;,/n./@小神殿;
 affinity ,/n./@密切;,/n./@吸引力;,/n./@喜歡;
 affluent ,/adj./@富裕的;,/adj./@丰富的;
 aggrieve ,/v./@使苦惱;
@@ -760,6 +761,7 @@ lockdown ,/n./@封鎖;,/n./@禁閉;
 lollipop ,/n./@棒棒糖;
 lonesome ,/adj./@寂寞的;
 lopsided ,/adj./@歪的;
+lukewarm ,/adj./@微热的;,/adj./@温热的;,/adj./@不冷不热的;,/adj./@冷淡的;,/adj./@微溫的;
 magazine ,/n./@彈倉;,/n./@彈盒;,/n./@雜誌;,/n./@期刊;
 magister ,/n./@教師;
 magnetic ,/adj./@磁性的;
