--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -34,6 +34,7 @@ adorable
 adultery
 advanced
 advocate
+aedicula
 affinity
 affluent
 aggrieve
@@ -760,6 +761,7 @@ lockdown
 lollipop
 lonesome
 lopsided
+lukewarm
 magazine
 magister
 magnetic
