--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -1036,6 +1036,7 @@ sensitive ,/adj./@敏感的;
 sentience ,/n./@感覺能力;,/n./@知覺能力;,/n./@情感能力;,/n./@感覺力;,/n./@感情能力;
 sentiment ,/n./@情緒;,/n./@態度;,/n./@祝願;,/n./@祝辭;
 September ,/n./@九月;
+sepulchre ,/n./@坟墓;
 sequencer ,/n./@定序器;,/n./@程序;,/n./@装置;
 seriously ,/adv./@嚴肅地;,/adv./@嚴重地;
 seventeen ,/adj./@十七;
