--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -75,7 +75,7 @@ apiece ,/adv./@每個;,/adv./@每人;,/adv./@每樣;,/adv./@各個;
 appall ,/v./@驚嚇;
 appeal ,/v./@上訴;,/v./@呼吁;,/adj./@有吸引力;
 appear ,/v./@出現;
-append ,/v./@附加;
+append ,/vt./@附加;,/vt./@增补;,/vt./@添加;,/vt./@追加;
 appose ,/vt./@并列;,/vt./@置於@(近處);
 arcana ,/n./@奧秘;,/n./@神秘;
 arcane ,/adj./@神秘的;,/adj./@晦澀難解的;,/adj./@晦澀難懂的;
@@ -1263,7 +1263,7 @@ relent ,/v./@變溫和;
 relief ,/n./@放松;
 relish ,/n./@滋味;,/n./@風味;,/n./@品味;,/n./@食慾;,/vt./@喜愛;,/vt./@享受;,/vt./@欣賞;,/vt./@期盼;,/vt./@憧憬;,/vt./@盼望;
 reload ,/v./@重新加載;
-remain ,/v./@剩余;
+remain ,/v./@剩余;,/vi./@遗留;,/vi./@逗留;,/v./@保持;
 remark ,/v./@話語;
 remedy ,/n./@治療;,/n./@補救;
 remind ,/v./@回憶;,/v./@提醒;
