--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1684,7 +1684,7 @@ velvet ,/n./@天鵝絨;,/n./@絲絨;,/n./@鹿茸;
 vender ,/n./@商販;
 vendor ,/n./@卖主;,/n./@小贩;,/n./@卖方;
 veneer ,/n./@薄片;,/n./@外表;,/n./@虛飾;,/v./@膠合;,/n./@飾面;
-verbal ,/adj./@(用)言辭的;
+verbal ,/adj./@(用)言辭的;,/adj./@口头的;,/adj./@动词的;
 verify ,/v./@核實;,/v./@證實;
 versus ,/prep./@對;,/prep./@對抗;
 vertex ,/n./@頂點;
