--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -1158,6 +1158,7 @@ snack ,/n./@快餐;,/n./@小吃;
 snafu ,/n./@混亂;,/v./@混亂;
 snail ,/n./@蝸牛;
 snake ,/n./@蛇;
+snare ,/n./@罗网;,/n./@圈套;,/n./@陷阱;
 snark ,/vt./@諷刺;,/vt./@嘲諷;
 sneak ,/v./@溜;,/v./@鬼鬼祟祟地做;
 sneer ,/v./@嘲笑;,/v./@冷笑;,/vt./@譏諷;
