--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -725,6 +725,7 @@ hearsay ,/n./@傳聞;,/n./@風聞;,/n./@謠傳;
 heather ,/adj./@雜色的;,/n./@石南;
 heating ,/n./@供暖;
 heavily ,/adv./@重地;
+Hebraic ,/adj./@希伯来人的;,/adj./@希伯来语的;
 hectare ,/n./@公頃;
 hegemon ,/n./@霸主;,/n./@霸權國家;
 heiress ,/n./@女繼承人;
