--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -13,7 +13,7 @@ abundant ,/adj./@丰富的;
 academia ,/n./@學術界;,/n./@學術圈;,/n./@學術環境;
 academic ,/adj./@學術的;,/adj./@學院的;
 accident ,/n./@事故;
-accolade ,/v./@同意;
+accolade ,/n./@荣誉;,/n./@赞誉;,/n./@嘉许;,/n./@赞赏;,/n./@嘉奖;
 accuracy ,/n./@精确;,/n./@精确性;
 accurate ,/adj./@精确的;
 acoustic ,/adj./@聽覺的;,/adj./@音響的;,/adj./@聲學的;,/adj./@原声的;
