--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -1075,6 +1075,7 @@ squeamish ,/adj./@易嘔吐的;,/adj./@易噁心的;,/adj./@過分審慎的;
 stability ,/n./@穩定性;
 stalemate ,/n./@僵局;,/n./@困境;
 starboard ,/n./@右舷;,/n./@右侧;
+statehood ,/n./@独立国家地位;
 statement ,/n./@聲明;,/n./@陳述;,/n./@口供;
 stateside ,/adj./@在美国的;,/adv./@在美国;,/adv./@向美国;
 statistic ,/n./@资料;,/n./@统计数据;
