--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -125,6 +125,7 @@ capacities ,/n./@能力;
 capitulate ,/vi./@投降;
 capricious ,/adj./@善變的;,/adj./@任性的;,/adj./@突发奇想的;
 castration ,/n./@閹割;
+cautionary ,/adj./@警告的;
 celebrated ,/adj./@有名的;
 censorship ,/n./@审查制度;
 centigrade ,/adj./@攝氏的;
