--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -212,6 +212,7 @@ cabin ,/n./@小木屋;,/n./@房舱;,/n./@座舱;
 cable ,/n./@電纜;,/n./@電報;
 cache ,/n./@電腦髙速緩衝存儲器;
 cadet ,/n./@軍校學生;,/n./@候補軍官;,/n./@候補警官;,/n./@見習生;
+cadre ,/n./@干部;,/n./@骨干队伍;
 calyx ,/n./@花萼;
 camel ,/n./@駱駝;
 canal ,/n./@運河;,/n./@渠道;
