--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -37,6 +37,7 @@ affair ,/n./@事情;
 affect ,/v./@影響;
 affirm ,/v./@斷定;,/vt./@申明;,/vt./@確認;,/vt./@證實;
 afield ,/adj./@在遠處;
+afloat ,/adj./@漂浮的;,/adj./@在海上的;,/adj./@能应付的;
 afraid ,/v./@恐怕;,/v./@害怕;
 agency ,/n./@代理;
 agenda ,/n./@議事日程;
@@ -600,6 +601,7 @@ fervor ,/n./@狂熱;
 fetish ,/n./@迷戀;,/n./@戀物;,/n./@迷戀之物;,/n./@神物;
 fetter ,/v./@束縛;,/v./@加脚鐐;,/n./@束縛;,/n./@脚鐐;,/n./@羈絆;
 feudal ,/adj./@封建的;
+fiasco ,/n./@惨败;
 fiddle ,/n./@提琴;
 fierce ,/adj./@兇猛的;,/adj./@猛烈的;
 figure ,/n./@數字;,/n./@體型;,/n./@肖像;,/n./@圖形;,/v./@計算;,/v./@出現;
@@ -1322,6 +1324,7 @@ rotary ,/adj./@旋轉的;
 rotate ,/v./@旋轉;
 rubber ,/n./@橡膠;,/n./@橡皮;
 rubble ,/n./@碎石;,/n./@碎磚;
+ruckus ,/n./@喧闹;,/n./@骚乱;
 rudder ,/n./@舵;
 ruffle ,/v./@弄皺;,/v./@惹怒;,/v./@擾亂;
 rumble ,/n./@隆隆聲;,/v./@隆隆響;,/n./@咕噥;,/vi./@嘟囔;
@@ -1395,7 +1398,7 @@ sheath ,/n./@鞘;,/n./@护套;
 shield ,/n./@防護;,/n./@盾;
 shiver ,/v./@顫抖;
 should ,/aux./@應該;
-shovel ,/n./@鏟子;
+shovel ,/n./@鏟子;,/n./@锹;
 shower ,/n./@淋浴;,/n./@陣雨;
 shrank ,/v./@收縮;
 shriek ,/v./@尖叫;
