--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -394,6 +394,7 @@ cutlery ,/n./@刀具;,/n./@餐具;,/n./@刀叉;,/n./@餐刀;
 cyanide ,/n./@氰化物;
 cyclone ,/n./@旋風;,/n./@氣旋;
 Cyclops ,/n./@獨眼巨人;
+cynical ,/n./@愤世嫉俗的;,/n./@冷漠自私的;
 cypress ,/n./@柏樹;
 darling ,/adj./@親愛的;
 dataset ,/n./@数据集;,/n./@资料集;,/n./@资料组;
@@ -791,6 +792,7 @@ instant ,/adj./@立卽的;
 instead ,/v./@代替;
 instill ,/vt./@逐漸灌輸;
 insular ,/adj./@孤立的;,/adj./@狹隘的;,/adj./@島嶼的;,/adj./@海島的;,/adj./@與世隔絕的;
+insulin ,/n./@胰岛素;
 integer ,/n./@整數;
 intense ,/adj./@強烈的;,/adj./@劇烈的;,/adj./@極度的;
 interim ,/adj./@臨時的;,/adj./@暫時的;,/adj./@中間的;
@@ -923,6 +925,7 @@ mollify ,/v./@平息;,/v./@撫慰;,/v./@緩和;
 momento ,/n./@紀念品;
 moniker ,/n./@名字;,/n./@綽號;
 monitor ,/n./@班長;,/n./@監視器;,/v./@監視;
+monsoon ,/n./@雨季;
 monster ,/n./@怪物;
 montage ,/n./@蒙太奇;
 monthly ,/n./@月刊;
