--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -597,6 +597,7 @@ greatest ,/adj./@最伟大的;
 greeting ,/n./@问候;,/n./@致敬;,/n./@欢迎;
 gruesome ,/adj./@恐怖的;,/adj./@令人厌恶的;
 guardian ,/n./@保護人;,/n./@監護人;,/adj./@守護的;
+guerilla ,/n./@游击队员;,/adj./@游击队的;
 guidance ,/v./@指导;
 gymnasia ,/n./@體育館;,/n./@健身房;
 gyration ,/n./@旋轉;,/n./@螺旋;,/n./@迴旋;
@@ -762,6 +763,7 @@ lollipop ,/n./@棒棒糖;
 lonesome ,/adj./@寂寞的;
 lopsided ,/adj./@歪的;
 lukewarm ,/adj./@微热的;,/adj./@温热的;,/adj./@不冷不热的;,/adj./@冷淡的;,/adj./@微溫的;
+luminary ,/n./@杰出人物;,/n./@知名人士;,/n./@发光体;
 magazine ,/n./@彈倉;,/n./@彈盒;,/n./@雜誌;,/n./@期刊;
 magister ,/n./@教師;
 magnetic ,/adj./@磁性的;
