--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -195,6 +195,7 @@ catamaran ,/n./@雙體船;
 catatonic ,/adj./@緊張性精神癥的;
 causality ,/n./@因果關係;,/n./@因果性;
 causative ,/adj./@使役的;,/n./@使役動詞;,/adj./@作為原因的;
+cavalcade ,/n./@队列;,/n./@队伍;
 celebrate ,/v./@庆祝;
 celebrity ,/n./@名人;
 celestial ,/adj./@天国的;,/adj./@天空的;,/adj./@天体的;,/adj./@精妙的;
