--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -394,6 +394,7 @@ cutlery
 cyanide
 cyclone
 Cyclops
+cynical
 cypress
 darling
 dataset
@@ -791,6 +792,7 @@ instant
 instead
 instill
 insular
+insulin
 integer
 intense
 interim
@@ -923,6 +925,7 @@ mollify
 momento
 moniker
 monitor
+monsoon
 monster
 montage
 monthly
