--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -37,6 +37,7 @@ affair
 affect
 affirm
 afield
+afloat
 afraid
 agency
 agenda
@@ -600,6 +601,7 @@ fervor
 fetish
 fetter
 feudal
+fiasco
 fiddle
 fierce
 figure
@@ -1322,6 +1324,7 @@ rotary
 rotate
 rubber
 rubble
+ruckus
 rudder
 ruffle
 rumble
