--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -597,6 +597,7 @@ greatest
 greeting
 gruesome
 guardian
+guerilla
 guidance
 gymnasia
 gyration
@@ -762,6 +763,7 @@ lollipop
 lonesome
 lopsided
 lukewarm
+luminary
 magazine
 magister
 magnetic
