--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -625,6 +625,7 @@ hence ,/adv./@因此;
 hepta ,/pref./@七;
 hight ,/v./@取名;
 hijab ,/n./@希賈布;,/n./@哈吉布;
+hinge ,/n./@铰链;
 hoard ,/vt./@貯藏;,/vt./@聚藏;
 hobby ,/n./@業余愛好;
 hoist ,/vt./@舉起;,/vt./@升起;,/vt./@吊起;,/vt./@提起;
@@ -941,7 +942,7 @@ posit ,/vt./@假設;,/vt./@假定;
 potty ,/n./@厠所;,/n./@便壺;
 pound ,/n./@磅;,/n./@英鎊;,/vt./@搗碎;,/vt./@猛擊;,/vt./@敲打;,/n./@16盎司的量;
 power ,/n./@能量;,/n./@力;,/n./@權力;
-prank ,/n./@惡作劇;
+prank ,/n./@惡作劇;,/vt./@捉弄;
 prawn ,/n./@對蝦;,/n./@明蝦;,/v./@捕蝦;
 press ,/v./@壓;,/v./@催促;,/v./@逼迫;,/n./@出版社;
 prick ,/v./@刺;,/v./@竪起;,/n./@陰莖;
