--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -207,6 +207,7 @@ cabbage ,/n./@捲心菜;,/n./@圓白菜;
 Cabbala ,/redirected./@target="Kabbalah";
 cabinet ,/n./@內閣;,/n./@壁櫥;,/n./@座舱;,/n./@柜;
 cadaver ,/n./@屍體;,/n./@死屍;,/n./@屍首;
+cadence ,/n./@抑扬顿挫;,/n./@韵律;,/n./@终止;
 calcium ,/n./@钙;
 calvary ,/n./@加爾瓦略山;,/n./@各各他山;
 canvass ,/vt./@征求;,/vt./@兜售;,/vt./@拉选票;
@@ -839,6 +840,7 @@ laundry ,/n./@洗衣店;
 leaflet ,/n./@傳單;
 lecture ,/n./@講座;
 leecher ,/n./@吸血騾;,/n./@吸血鬼;
+leeward ,/n./@背风面;,/adj./@背风的;,/adv./@背风地;
 leisure ,/adj./@空閑的;,/n./@閑暇;
 lengthy ,/adj./@漫長的;
 lenient ,/adj./@仁慈的;,/adj./@寬大的;,/adj./@寬宏的;,/adj./@寬厚的;,/adj./@寬鬆的;
