--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -401,6 +401,7 @@ duplicate ,/v./@复制;
 dysentery ,/n./@痢疾;
 dystopian ,/adj./@反面烏托邦的;,/adj./@反烏托邦的;,/adj./@反烏托邦式的;
 earnestly ,/adv./@认真地;
+eavesdrop ,/vi./@偷听;,/vi./@窃听;
 eccentric ,/adj./@古怪的;,/adj./@不正圓的;,/adj./@偏心的;,/adj./@不同圓心的;,/n./@古怪的人;,/n./@偏心圓;,/n./@偏心輪;
 economist ,/n./@经济学家;
 edematous ,/adj./@浮腫的;,/adj./@水腫的;
