--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -207,6 +207,7 @@ cabbage
 Cabbala
 cabinet
 cadaver
+cadence
 calcium
 calvary
 canvass
@@ -839,6 +840,7 @@ laundry
 leaflet
 lecture
 leecher
+leeward
 leisure
 lengthy
 lenient
