--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -271,6 +271,7 @@ consensus ,/n./@一致;,/n./@舆论;,/n./@合意;
 consonant ,/n./@辅音;,/n./@辅音字母;
 construct ,/v./@建筑;
 consulate ,/n./@領事館;
+contagion ,/n./@接触传染;,/n./@蔓延;
 contender ,/n./@竞争者;,/n./@争夺者;,/n./@角逐者;
 contented ,/adj./@满足的;
 continent ,/n./@大陸;,/adj./@節制的;
