--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1126,6 +1126,7 @@ phobia ,/n./@恐懼症;,/n./@懼怕;
 phrase ,/n./@短語;
 phylum ,/n./@門;,/n./@語係;
 piazza ,/n./@廣場;
+picket ,/n./@纠察;
 pickle ,/n./@泡菜;
 pickup ,/n./@輕型貨車;,/n./@接人;,/n./@提貨;,/n./@偶然結識;,/n./@偶然結識的人;,/n./@好轉;
 pierce ,/v./@刺穿;,/v./@透入;
