--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1294,6 +1294,7 @@ scratch ,/v./@抓;,/v./@搔;,/v./@劃;
 screech ,/v./@尖叫;,/n./@尖叫;
 scuffle ,/n./@扭打;,/vi./@扭打;
 scumbag ,/n./@卑鄙的家伙;
+scuttle ,/vt./@凿沉;,/vi./@小步疾走;
 seagull ,/n./@海鷗;
 sealant ,/n./@密封材料;,/n./@密封物;,/n./@密封劑;
 seastar ,/n./@海星;
