--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -678,7 +678,7 @@ iteration ,/n./@迭代;,/n./@反復;,/n./@重複;
 itinerary ,/n./@旅程;
 jellyfish ,/n./@水母;
 judgement ,/n./@判決;,/n./@意見;,/n./@判斷;
-judicious ,/adj./@明智的;
+judicious ,/adj./@明智的;,/adj./@审慎的;
 Kabbalism ,/n./@卡巴拉主義;,/n./@卡巴拉學;,/n./@猶太教神秘主義;,/n./@犹太教神秘释经学;
 Kabbalist ,/n./@卡巴拉主義者;,/n./@卡巴拉學信徒;,/n./@卡巴拉人士;
 katabatic ,/adj./@下降的;,/adj./@下吹的;
