--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -448,6 +448,7 @@ spontaneity ,/n./@自发性;
 spontaneous ,/adj./@自然的;,/adj./@天真率直的;,/adj./@自发的;
 standardize ,/v./@標準化;
 stereoscope ,/n./@體視鏡;,/n./@立體鏡;
+stethoscope ,/n./@听诊器;
 stimulation ,/n./@刺激;,/n./@激励;
 stipulation ,/n./@約定;,/n./@規定;,/n./@明確的要求;,/n./@條款;,/n./@條文;,/n./@契約;
 stomachache ,/n./@胃痛;
