--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -585,6 +585,7 @@ lobe ,/n./@葉;,/n./@裂片;
 lock ,/n./@鎖;
 logo ,/n./@商標;,/n./@標識;
 loin ,/n./@腰部;,/n./@下身;,/n./@腰肉;
+lone ,/adj./@孤身的;,/adj./@独自的;,/adj./@唯一的;
 long ,/adj./@長@的;
 look ,/v.//vi.//vt./@看;
 loom ,/v./@隱隱出現;,/n./@織布機;,/vi./@隱約顯現;,/vi./@陰森地逼近;
