--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -1629,6 +1629,7 @@ trivia ,/n./@瑣事;
 trophy ,/n./@戰利品;,/n./@獎品;,/n./@勝利紀念品;
 tropic ,/n./@回歸線;
 trough ,/n./@水槽;,/n./@槽;,/n./@波谷;,/n./@低谷;
+truant ,/adj./@逃学的;,/n./@逃学者;
 tumble ,/v./@跌倒;,/v./@摔跤;,/v./@打滾;
 tumult ,/n./@混乱;,/n./@骚乱;,/n./@喧闹;,/n./@喧哗;,/#syn/@turmoil;
 tunnel ,/n./@隧道;
