--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -214,6 +214,7 @@ ceremony ,/n./@仪式;,/n./@典礼;,/n./@礼节;
 chairman ,/n./@主席;
 champion ,/n./@冠军;
 charcoal ,/n./@木炭;
+charisma ,/n./@魅力;,/n./@个人魅力;,/n./@超凡气质;
 charming ,/adj./@迷人的;
 chastity ,/n./@贞洁;
 chemical ,/adj./@化学的;,/n./@化学药品;,/n./@化学制品;
