--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -1087,6 +1087,7 @@ plastic ,/adj./@可塑的;,/adj./@塑料的;,/adj./@塑造的;,/n./@塑料;
 plateau ,/n./@髙原;,/n./@髙地;,/n./@穩定期;,/n./@停滯期;,/n./@穩定狀態;,/n./@停滯狀態;,/vi./@穩定;,/vi./@停滯;
 platoon ,/n./@排;,/n./@群;,/n./@組;
 pleural ,/adj./@肋膜的;,/adj./@胸膜的;
+pliable ,/adj./@柔韧的;
 plosive ,/n./@爆破音;,/adj./@爆破音的;,/n./@破裂音;,/adj./@破裂音的;
 plumber ,/n./@管道工;,/n./@管子工;
 plummet ,/vi./@坠落;,/vi./@跌落;,/vi./@暴跌;,/vt./@急遽下降;,/vt./@驟降;,/n.//redirected./@target="plumb line";
@@ -1261,6 +1262,7 @@ robbery ,/n./@搶劫;
 Rodinia ,/n./@羅迪尼亞大陸;
 romance ,/n./@浪漫;,/n./@浪漫氣氛;,/n./@風流韻事;
 Romance ,/n./@羅曼語;,/n./@拉丁系語言;,/adj./@羅曼語的;,/adj./@拉丁系語言的;
+rotunda ,/n./@圆形大厅;
 routine ,/n./@常规;,/n./@例行程序;,/adj./@例行的;,/adj./@常规的;,/adj./@平淡的;,/adj./@乏味的;
 royalty ,/n./@王室;,/n./@版稅;,/n./@王權;,/n./@專利稅;
 rubbish ,/n./@垃圾;
