--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -1087,6 +1087,7 @@ plastic
 plateau
 platoon
 pleural
+pliable
 plosive
 plumber
 plummet
@@ -1261,6 +1262,7 @@ robbery
 Rodinia
 romance
 Romance
+rotunda
 routine
 royalty
 rubbish
