--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -681,6 +681,7 @@ radiometry ,/n./@輻射度量學;
 radiosonde ,/n./@無線電高空測候器;,/n./@無線電探空儀;
 reasonable ,/adj./@合理的;
 receptacle ,/n./@儲藏所;,/n./@容器;
+reciprocal ,/adj./@对等的;,/adj./@相互的;,/adj./@互惠的;
 recreation ,/n./@娱乐;
 recuperate ,/vt./@恢復;,/vt./@挽回;
 recurrence ,/n./@復發;
