--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -824,6 +824,7 @@ transplant ,/v./@移植;
 traumatize ,/vt./@損傷;,/vt./@使受精神創傷;
 tremendous ,/adj./@极大的;,/adj./@极好的;
 triviality ,/n./@瑣事;,/n./@瑣碎;
+troglodyte ,/n./@穴居人;
 tumultuous ,/adj./@混乱的;,/adj./@骚乱的;,/adj./@嘈杂的;,/adj./@吵闹的;,/adj./@喧哗的;
 turbulence ,/n./@动荡;
 ubiquitous ,/adj./@普遍存在的;,/adj./@随处可见的;,/adj./@無所不在的;,/adj./@到處存在的;
